# flexible-mahjong

./: Cargo.toml  README.md
.github/workflows/: rust.yml
engine-core/: .gitignore  Cargo.toml
engine-core/src/: collections.rs  game.rs  hands.rs  lib.rs  players.rs  tile.rs  variations.rs
engine-core/src/players/: interactive_player.rs
engine-core/src/variations/: jp4s17t.rs
engine-core/src/variations/jp4s17t/: game.rs  hands.rs  structure.rs  tile.rs
engine-core/src/variations/jp4s17t/game/: game_moderator.rs  player_broker.rs  player_hand.rs
engine-core/src/variations/jp4s17t/hands/: all_in_triplets.rs  eight_pairs_and_half.rs  sixteen_orphans.rs
model/: core.puml
