[package]
name = "flexible-marjong-engine-core"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
itertools = "0.8"

[dev-dependencies]
colored = "1.8"